# yijing

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
corpora-i-ching/: .gitignore  PRIVACY.md  README.md  db.sqlite3  index.html  package-lock.json  package.json  set_android_icons.sh  shift_icons.py  tailwind.config.js  tsconfig.json  vite.config.ts
corpora-i-ching/src/: App.tsx  index.css  main.ts  main.tsx
corpora-i-ching/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
corpora-i-ching/src-tauri/capabilities/: default.json
corpora-i-ching/src-tauri/icons/: icon.icns
corpora-i-ching/src-tauri/ios/: .gitignore  ExportOptions.plist  README.md  generate.sh  project.yml.template
corpora-i-ching/src-tauri/resources/: db.sqlite3
corpora-i-ching/src-tauri/src/: db.rs  fetch_all.rs  fetch_consultation_interpretation.rs  fetch_hex_data.rs  lib.rs  llm.rs  main.rs
corpora-i-ching/src/components/: AboutView.tsx  BrowseView.tsx  ChangingLine.tsx  HexagramDisplay.tsx  HexagramLine.tsx  InterpretationModal.tsx  LanguageSwitcher.tsx  LlmInterpretation.tsx  NoReadingView.tsx  ReadingView.tsx
corpora-i-ching/src/components/ui/: dialog.tsx
corpora-i-ching/src/context/: LanguageContext.tsx
