[package]
name = "corpora-i-ching"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and avoid conflicts with the binary.
name = "corpora_i_ching_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
anyhow = "1.0.97"
tauri-plugin-log = "2.3.1"
log = "0.4.26"
